# initcontainer-migration-demo

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_job_runs.py
app/: database.py  main.py  migrate.py  models.py
initcontainer_migration_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
k8s/: deployment.yaml  postgres.yaml  secret.yaml  service.yaml
scripts/: test-kind.sh
tests/: conftest.py  test_concurrent_migrations.py  test_migration_lock.py
